...
            android:layout_weight="1"
            android:text="GALLERY"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/button_gallery_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="FILTER"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
...
